# ConciseRenderEngine

./: .gitignore  CMakeLists.txt  README.md  coding_style.md  gcc_opengl_windows.md
ConciseRenderEngine/Camera/: camera.cpp  camera.h
ConciseRenderEngine/Mathematics/: matrix.h  matrix4f.h  point.h  vector.h  vector4f.h
ConciseRenderEngine/Utils/: utils.h
Resources/Shaders/: objectColor.frag  objectColor.vert
Resources/Shaders/blend_test/: blending.fs
Resources/Shaders/deferred_render_test/: deferred_shading.fs
Resources/Shaders/frame_test/: framebuffers_screen.fs
Resources/Shaders/lighting_map_test/: objectColor.vert
Resources/Shaders/multi_light_test/: objectColor.frag
SceneRender/Camera/: camera.cpp  camera.h
SceneRender/Model/: mesh.h  model.h
SceneRender/Shader/: shader.h
Tests/Camera/: cameraTest.cpp
Tests/ConciseRenderEngine/Mathematics/: CMakeLists.txt  matrix_test.cpp  point_test.cpp  vector_test.cpp
Tests/SceneRender/AssimpTest/: CMakeLists.txt  assimp_test.cpp
Tests/SceneRender/BlendTest/: CMakeLists.txt  blend_test.cpp
Tests/SceneRender/CameraShaderTest/: CMakeLists.txt  camera_shader_test.cpp  object_color.frag  object_color.vert
Tests/SceneRender/CubeMapTest/: CMakeLists.txt  cube_map_test.cpp  readme.md  skybox.vs
Tests/SceneRender/DeferredRenderTest/: CMakeLists.txt  deferred_render_test.cpp
Tests/SceneRender/FrameTest/: CMakeLists.txt  frame_test.cpp  framebuffers_screen.fs
Tests/SceneRender/LightingMapTest/: CMakeLists.txt  lighting_map_test.cpp  object_color.frag
Tests/SceneRender/MultiLightTest/: CMakeLists.txt  multi_light_test.cpp
Tests/SceneRender/ShadowMapTest/: CMakeLists.txt  debug_quad.fs  readme.md  shadow_map.fs  shadow_map.vs  shadow_map_test.cpp
Tests/Shaders/: CMakeLists.txt
